--- a/wiki/en/metadata.ini
+++ b/wiki/en/metadata.ini
@@ -2,6 +2,6 @@
 Title: %(name)s
 Version: %(ver)s-%(update)s
 Source: http://%(lang)s.wikipedia.org (dump file http://download.wikimedia.org/%(lang)swiki/%(ver)s/%(lang)swiki-%(ver)s-pages-articles.xml.bz2)
-Description: %(title)s for Aard Dictionary is an offline version of http://%(lang)s.wikipedia.org. All documents are intended to be verbatim copies of their originals. However, due to technical limitations certain elements cannot be reproduced or reproduced accurately in Aard Dictionary. Specifically, Aard Dictionary versions of documents contain no images (this also affects any articles that contain mathematical formulas); table support is limited (complex tables may omit data or represent table structure inaccurately); some data included via templates may be omitted due to limitations or errors during conversion to Aard Dictionary format. 
+Description: %(title)s for Aard Dictionary is a collection of text documents from http://%(lang)s.wikipedia.org (articles only). Some documents or portions of documents may have been omited or could not be converted to Aard Dictionary format. All documents can be found online at http://%(lang)s.wikipedia.org under the same title as displayed in Aard Dictionary.
 article_language: %(sitelang)s
 index_language: %(sitelang)s
